# doctor-ai-dashboard

./: .env.example  .gitignore  CHECKPOINT.md  Caddyfile  docker-compose.prod.yml  docker-compose.yml  env_production_vps.txt  executive_summary.md  health-final.json  health.json  health2.json  test-fetch-correct.js  test-fetch.js  test-http.js
.claude/: settings.json  settings.local.json
agents/: Dockerfile  main.py  pyproject.toml  requirements.txt
agents/agents/: agent_bus.py  ana.py  base.py  insights.py  kimi.py  sofia.py  thales.py
agents/api/: deps.py  middleware.py
agents/api/routes/: chat.py  health.py  ingest.py  insights.py  kimi.py  kommo_sync.py  orchestrate.py  rag.py  thales.py
agents/config/: settings.py
agents/config/prompts/: ana.yaml  insights.yaml  kimi.yaml  sofia.yaml  thales.yaml
agents/config/references/: cooperation-patterns.md  learning-patterns.md  microtask-rules.md
agents/ingestion/: audio_loader.py  chunker.py  crm_loader.py  image_loader.py  kimi_loader.py  perplexity_loader.py  pipeline.py  video_loader.py  web_scraper.py
agents/models/: client_profile.py  conversation.py  document.py
agents/rag/: chroma_client.py  embeddings.py  retriever.py
agents/services/: blog_generator.py  classifier.py  kommo_scraper.py  llm_router.py  scheduler.py  supabase_client.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gateway/: Dockerfile  package-lock.json  package.json  test-webhook.js
inventario-app/: package-lock.json  tailwind.config.js  vite.config.js
rag-service/: Dockerfile  (+1 more)
(+101 files in other folders)
